--- a/acee.css
+++ b/acee.css
@@ -66,20 +66,27 @@ h1 {
 }
 
 #nuestros_servicios{
-    width: 90%;
-    height: auto;
+    width: 100%;
+    height: auto; 
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+
+#nuestros_servicios h2{
+    width: 95%;
     text-align: center;
-    color: rgb(0, 0, 0);
-    border-bottom: solid 2px;
+    border-bottom: solid 1px;
+    border-top: solid 1px;
     border-color: rgb(0, 0, 0);
-    border-radius: 5px;
-    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    color: rgb(255, 255, 255);
 }
 
 #opciones_servicio{
-    width: 100%;
+    width: 95%;
     height: auto;
-    margin-top: 5px;
+    margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-around;
@@ -89,8 +96,7 @@ h1 {
 }
 
 .card{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    border-color: rgb(0, 0, 0);
 }
 
 .card-title{
@@ -103,34 +109,77 @@ h1 {
 }
 
 #nosotros{
-    width: 80%;
+    width: 100%;
     height: auto;
-    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: x-large;
+    
     text-align: center;
+    color: rgb(0, 0, 0);
 }
 
 #nosotros h2 {
-    width: 30%;
-    border-bottom: solid 2px;
+    width: 95%;
+    border-bottom: solid 1px;
+    border-top: solid 1px;
+    border-color: rgb(0, 0, 0);
+    border-radius: 30px;
     margin: 30px;
+    color: rgb(255, 255, 255);
+}
+
+#nosotros p {
+    width: 95%;
+    font-size: x-large;
 }
 
 #escogenos{
-    width: 98%;
+    width: 100%;
     height: auto;
     padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: x-large;
+    font-size: large;
     text-align: center;
+    color: rgb(0, 0, 0);
+}
+
+#escogenos h2 {
+    width: 95%;
+    height: auto;
+    text-align: center;
+    border-bottom: solid 1px;
+    border-top: solid 1px;
+    border-color: rgb(0, 0, 0);
+    border-radius: 30px;
+    margin: 30px;
+    font-size: xx-large;
     color: rgb(255, 255, 255);
+}
+
+#escogenos p {
+    width: 95%;
+    font-size: x-large;
+}
+
+footer {
+    width: 100%;
+    height: 150px;
+    color: rgb(3, 3, 3);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: large;
+    border-top: solid 1px;
+    border-color: rgb(0, 0, 0);
 }
 
 
